Ajout de mon CV

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p>Switch Theme</p>
                         <a class="dark-ligth-button" href="#"><img src="assets/pictures/home/dark-mode.png" alt=""></a>
                     </div>
-                    <a target="_blank" class="download-cv" href="assets/cv/mon-vc.pdf">Télécharger CV</a>
+                    <a target="_blank" class="download-cv" href="assets/cv/hery-cv.pdf">Télécharger CV</a>
                 </div>
             </div>
         </nav>
@@ -142,7 +142,7 @@
             <div class="work-container">
                 <div class="work-row">
                     <div class="work-photos work-row-left">
-                        <a target="_blank" class="link-picture-work"  href="#">
+                        <a target="_blank" class="link-picture-work"  href=" https://heritianajd.github.io">
                             <img src="assets/pictures/work/portfolio.PNG" alt="picture-work">
                         </a>
                     </div>
@@ -286,13 +286,39 @@
                             <div class="work-expertise">GitHub</div>
                         </div>
                         <div class="link-projects-container">
-                            <a target="_blank" href="https://www.figma.com/file/Q3yNeD7WTK9QHDldg9vaRl/UI-Design-FishEye-FR?type=design&node-id=120-544&mode=design" class="link-projects">
+                            <a target="_blank" href="https://www.figma.com/file/oUS0zH00UxM4uaKqpSTZ0z/Houter---House-Hunter-UI-Design-(Community)?node-id=4%3A18&mode=dev" class="link-projects">
                                 <img src="assets/pictures/work/icon-external.png" alt="icon-external">
                             </a>
-                            <a target="_blank" href="https://github.com/heritianajd/fisheye.git" class="link-projects">
+                            <a target="_blank" href="https://github.com/heritianajd/house-hunter.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
                             </a>
                         </div>
+                    </div>
+                </div>
+                <div class="work-row">
+                    <div class="work-text work-row-left">
+                        <h3>Anim Blog</h3>
+                        <p>Un site des mangas, la dernière maquette que j'ai utiliser pour me progresser. J'ai implémenté un peu de javascript pour le slide dans ce site. </p>
+                        <div class="work-container-expertise">
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
+                            <div class="work-expertise">Figma</div>
+                            <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://www.figma.com/file/7ltS0YhBRHgRU1DcjI1ma3/Anime-Blog-(Community)?node-id=0%3A1&mode=dev" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/anim-blog.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="work-photos work-row-rigth">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/anim-blog/">
+                            <img class="picture-work" src="assets/pictures/work/anim-blog.PNG" alt="picture-work">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -307,7 +333,7 @@
                     <div class="email-phone">
                         <img src="assets/pictures/work/email-icone.png" alt="icone-email">
                         <p>heritiana.rakotondratsimba@gmail.com</p>
-                        <button><img src="assets/pictures/work/copy-icone.png" alt=""></button>
+                        <button class="btnCopyMail"><img src="assets/pictures/work/copy-icone.png" alt=""></button>
                     </div>
                 </div>
                 <div class="contact-platforms">
@@ -322,7 +348,7 @@
         </section>
     </main>
     <footer>
-        <p><img src="assets/pictures/work/icone.png" alt="icone-c">2023 │<a href="#">Designé</a> par Sagar Shah et <a href="#">codé</a> <span>♥</span> par Heritiana</p>
+        <p><img src="assets/pictures/work/icone.png" alt="icone-c">2023 │<a href="https://www.figma.com/file/sBnFUKyLZZ7itIPTiodY96/Personal-Portfolio-Website-Template-%7C-Mobile-%26-Desktop-(Community)?node-id=327%3A262&mode=dev">Designé</a> par Sagar Shah et <a href="https://github.com/heritianajd/house-hunter.git">codé</a> <span>♥</span> par Heritiana</p>
     </footer>
     <script src="script.js"></script>
 </body>
