Modification dans html et work.css

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <section id="work">
             <div class="work-head">
                 <h4>Project</h4>
-                <p>Les projects donc j'ai fait pour àmeliorer mon compétence:</p>
+                <p>Les projects donc j'ai fait pour àmeliorer mon compétence, vous pouvez voir plus sur ces projects en cliquant sur le lien qui contient le photos:</p>
             </div>
             <div class="work-container">
                 <div class="work-row">
@@ -158,7 +158,7 @@
                         </div>                         
                         <div class="link-projects-container">
                             <a target="_blank" href="https://www.figma.com/file/sBnFUKyLZZ7itIPTiodY96/Personal-Portfolio-Website-Template-%7C-Mobile-%26-Desktop-(Community)?node-id=327%3A262&mode=dev" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/heritiana.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
@@ -179,7 +179,7 @@
                         </div>
                         <div class="link-projects-container">
                             <a target="_blank" href="https://www.figma.com/file/sBnFUKyLZZ7itIPTiodY96/Personal-Portfolio-Website-Template-%7C-Mobile-%26-Desktop-(Community)?node-id=327%3A262&mode=dev" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/sagarshah.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
@@ -209,7 +209,7 @@
                         </div>
                         <div class="link-projects-container">
                             <a target="_blank" href="https://openclassrooms-student-center.github.io/1603881-creez-votre-site-web-avec-html5-et-css3/" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/robbie-lens.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
@@ -235,7 +235,7 @@
                         </div>
                         <div class="link-projects-container">
                             <a target="_blank" href="https://www.figma.com/file/Q3yNeD7WTK9QHDldg9vaRl/UI-Design-FishEye-FR?type=design&node-id=120-544&mode=design" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/fisheye.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
@@ -256,7 +256,7 @@
                         </div>
                         <div class="link-projects-container">
                             <a target="_blank" href="https://app.visily.ai/projects/4f5b99bf-68c8-4755-8812-636f472f7ace/boards/447986" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/dashboard-mockup.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
@@ -287,7 +287,7 @@
                         </div>
                         <div class="link-projects-container">
                             <a target="_blank" href="https://www.figma.com/file/oUS0zH00UxM4uaKqpSTZ0z/Houter---House-Hunter-UI-Design-(Community)?node-id=4%3A18&mode=dev" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/house-hunter.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
@@ -308,7 +308,7 @@
                         </div>
                         <div class="link-projects-container">
                             <a target="_blank" href="https://www.figma.com/file/7ltS0YhBRHgRU1DcjI1ma3/Anime-Blog-(Community)?node-id=0%3A1&mode=dev" class="link-projects">
-                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
                             <a target="_blank" href="https://github.com/heritianajd/anim-blog.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
