Ajout du cv et modification dans html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="about-paragraph">
                         <p>Mon nom complet est RAKOTONDRATSIMBA Heritiana Jean Dinah, j'ai 19 ans et je suis Intégrateur de site web junior.</p>
                         <p>D'après l'obtention de mon diplôme baccalauréat en 2022, je me suis intéressé à la création de site web.</p>
-                        <p>J'ai commencer à intégrer des sites avec html et css, en utilisant des maquettes dans figma et visily, ainsi que des éditeurs de text comme Visual Stusio Code et Webstorm.</p>
+                        <p>J'ai commencer à intégrer des sites avec html et css, en utilisant des maquettes dans figma et visily, ainsi que des éditeurs de text comme Visual Stusio Code et Webstorm. J'ai déjà utilisé quelqeu fonctionnement de javascript assez simple comme cacher le mot de passe, un barre de menu respomsive.</p>
                         <p>Vous pouvez avoir besoin de moi et je vous promets que je ferai ce que je peux même si je ne fait que débuter.</p>
                     </div>
                 </div>
@@ -225,7 +225,7 @@
                     </div>
                     <div class="work-text work-row-rigth">
                         <h3>Fisheye</h3>
-                        <p>Site des photographes, la deuxième site que j'ai crée avec html et css. J'utilise Figma pour la maquette.</p>
+                        <p>Site des photographes, la deuxième site que j'ai crée avec html et css. J'utilise Figma pour la maquette. Dans ce site, il y a un bouton contact et j'ai ajouté un peut de javascript pour que le modal dans ce bouton fonctionne.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
