--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                         <img src="assets/pictures/skills/algorithme.png" alt="icone-algorithme">
                         <p>Algotithme</p>
                     </div>
+                    <div class="skills-grid-technologie">
+                        <img src="assets/pictures/skills/algorithme.png" alt="icone-algorithme">
+                        <p>Bulma</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -289,7 +293,7 @@
                             <a target="_blank" href="https://www.figma.com/file/oUS0zH00UxM4uaKqpSTZ0z/Houter---House-Hunter-UI-Design-(Community)?node-id=4%3A18&mode=dev" class="link-projects">
                                 <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
                             </a>
-                            <a target="_blank" href="https://github.com/heritianajd/house-hunter.git" class="link-projects">
+                            <a target="_blank" href="https://github.com/heritianajd/monito.git" class="link-projects">
                                 <img src="assets/pictures/work/github.png" alt="icon-external">
                             </a>
                         </div>
@@ -321,6 +325,57 @@
                         </a>
                     </div>
                 </div>
+                <!-- Monito -->
+                <div class="work-row">
+                    <div class="work-photos work-row-left">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/monito/">
+                            <img class="picture-work" src="assets/pictures/work/monito.PNG" alt="picture-work">
+                        </a>
+                    </div>
+                    <div class="work-text work-row-rigth">
+                        <h3>Monito</h3>
+                        <p>La dernière site  que j'ai élaborée en utilisant HTML et CSS. Ce site contient de nombreuses lignes de code JavaScript, bien que je ne les comprenne pas encore complètement, je travaille actuellement sur mon apprentissage de JavaScript. </p>
+                        <div class="work-container-expertise">
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
+                            <div class="work-expertise">Figma</div>
+                            <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://www.figma.com/file/G18Sp3rgmgDpCUbqJbVmws/%5BFREE-TEMPLATE%5D-eCommerce-Website---Monito-Pets-for-Best-(Community)-(Community)?type=design&node-id=1-4&mode=design&t=SEKsVxnOwSYZxdeT-0" class="link-projects">
+                                <img src="assets/pictures/work/icone-maquette.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/monito.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Bulma -->
+                <div class="work-row">
+                    <div class="work-text work-row-left">
+                        <h3>Portfolio-Bulma</h3>
+                        <p>Un exemple de portfolio et aussi la première site que j'ai construite avec le framwork css Bulma. L'exercice est tiré dans une formation en ligne.</p>
+                        <div class="work-container-expertise">
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Bulma</div>
+                            <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://github.com/heritianajd/bulma.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="work-photos work-row-rigth">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/bulma/">
+                            <img class="picture-work" src="assets/pictures/work/bulma.PNG" alt="picture-work">
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="contact">
@@ -337,7 +392,7 @@
                     </div>
                     <div class="email-phone">
                         <img src="assets/pictures/work/email-icone.png" alt="icone-email">
-                        <p id="phoneNumber">65465165565615</p>
+                        <p id="phoneNumber">+261335765219</p>
                         <button class="btnCopyMail" onclick="copyText('phoneNumber')"><img class="copy-image" src="assets/pictures/work/copy-icone.png" alt=""></button>
                     </div>
                 </div>
@@ -355,6 +410,15 @@
     <footer>
         <p><img src="assets/pictures/work/icone.png" alt="icone-c">2023 │<a href="https://www.figma.com/file/sBnFUKyLZZ7itIPTiodY96/Personal-Portfolio-Website-Template-%7C-Mobile-%26-Desktop-(Community)?node-id=327%3A262&mode=dev">Designé</a> par Sagar Shah et <a href="https://github.com/heritianajd/house-hunter.git">codé</a> <span>♥</span> par Heritiana</p>
     </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            setTimeout(function (){
+                const homePage = document.getElementById('home');
+                homePage.style.background = "#030712";
+            }, 2000)
+        })
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
